[gd_scene load_steps=2 format=2]

[ext_resource path="res://HealthBar.gd" type="Script" id=3]

[node name="HealthBar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -1.0
margin_right = 1.0
margin_bottom = -1.0
script = ExtResource( 3 )

[node name="HealthBar" type="TextureProgress" parent="."]
anchor_right = 0.052
anchor_bottom = 0.048
margin_left = 1.0
margin_top = 4.0
margin_right = 40.0
margin_bottom = -10.0
tint_progress = Color( 0, 1, 0, 1 )

[node name="HealthUnder" type="TextureProgress" parent="."]
margin_right = 40.0
margin_bottom = 40.0
tint_progress = Color( 1, 0, 0, 1 )

[node name="UpdateTween" type="Tween" parent="."]
